<resources>
    <string name="app_name">swipePic</string>
    <string name="toast_saved">已保存到相册</string>
    <string name="toast_save_failed">保存失败，请重试</string>
    <string name="toast_undone">已撤销</string>
    <string name="toast_undo_save_removed">已撤销并从相册删除</string>
    <string name="empty_title">暂无更多图片</string>
    <string name="empty_retry">刷新</string>
    <string name="error_load_failed">加载失败</string>
    <string name="error_no_network">网络未连接，请检查网络</string>
    <string name="error_network">网络异常，请稍后重试</string>
    <string name="error_network_timeout">网络连接超时，请检查网络</string>
    <string name="error_server">服务异常，请稍后重试</string>
    <string name="btn_retry">重试</string>
    <string name="btn_save">保存</string>
    <string name="btn_skip">跳过</string>
    <string name="btn_undo">撤销</string>
    <string name="content_save">保存到相册</string>
    <string name="content_skip">跳过该图片</string>
    <string name="content_undo">撤销上一步</string>
    <string name="content_card">图片卡片</string>
    <string name="loading">加载中…</string>
</resources>
